- TI-51   in the taskwarrior hook, deleting a task doesn't stop the watch
          (thanks to Mattia Rizzolo).
- TI-52   The 'refresh' scripts overwrites previous years data
          (thanks to m8r).
- TI-61   Typo in exclusion.t.cpp
          (thanks to Thomas Lauf).
- TI-64   Command 'stop' with date before current interval's start date causes segfault
          (thanks to Thomas Lauf).
- Fixed Python 3 support of the holiday/refresh script
          (thanks to Jelle van der Waa).
- Added missing man page link
          (thanks to David Patrick).
- Taskwarrior projects are now used as-is as tags, and also split on the '.' to
  represent project hierarchy as separate tags.
          (thanks to Josh Proehl).

------ current release ---------------------------

1.0.0 (2016-08-17) 6428ce89fcf2a5665d9351c50c2a84c98543206c

- WWW-12  yesterday tag not recognised
          (thanks to Michel Crucifix).
- TI-34   Make timew more user-friendly by adding --help and default output
          (thanks to Felix Wolfsteller).
- Added 'totals.py' sample extension.
- Added extension list to the 'help' command.

------ old release ---------------------------

1.0.0.beta1 (2016-07-26) -

- TI-9    Task spanning over whole day should show up as taking 24:00 instead
          of 23:59
          (thanks to Tomas Babej).
- TI-10   The 'total' summands in the month report are not aligned with the
          column name
          (thanks to Tomas Babej).
- TI-11   Ids displayed incorrectly
          (thanks to Michael Meier).
- TI-12   report command does not find extensions
          (thanks to lumbric).
- TI-14   Warn when new tags are being created
          (thanks to Matthias Rieber).
- TI-16   Should handle case where taskwarrior hook is used before timew
          (thanks to Aaron Curtis).
- TI-17   ids of tracked activities should not change when editing
          (thanks to lumbric).
- TI-18   Add remove/delete command
          (thanks to lumbric).